[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch.crates-io]
# tendermint              = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
# tendermint-rpc          = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
# tendermint-proto        = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
# tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
# tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
# tendermint-testgen      = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
safe-regex          = { git = "https://github.com/informalsystems/safe-regex.git", branch = "no-std" }
safe-regex-macro    = { git = "https://github.com/informalsystems/safe-regex.git", branch = "no-std" }
safe-regex-compiler = { git = "https://github.com/informalsystems/safe-regex.git", branch = "no-std" }
safe-quote          = { git = "https://github.com/informalsystems/safe-regex.git", branch = "no-std" }
safe-proc-macro2    = { git = "https://github.com/informalsystems/safe-regex.git", branch = "no-std" }
