[package]
name       = "ibc"
version    = "0.6.0"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[features]
# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = [ "tendermint-testgen", "sha2" ]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.8.0", path = "../proto" }
ics23 = { git = "https://github.com/heliaxdev/ics23", branch = "tomas/update-prost" }
anomaly = "0.2.0"
borsh = { version = "0.9.0", optional = true }
chrono = "0.4.19"
thiserror = "1.0.26"
serde_derive = "1.0.104"
serde = "1.0.125"
serde_json = "1"
tracing = "0.1.26"
prost = "0.8.0"
prost-types = "0.8.0"
bytes = "1.0.0"
dyn-clonable = "0.9.0"
regex = "1"
subtle-encoding = "0.5"
sha2 = { version = "0.9.3", optional = true }

[dependencies.tendermint]
git = "https://github.com/heliaxdev/tendermint-rs"
branch = "tomas/lowercase-node-id"

[dependencies.tendermint-proto]
git = "https://github.com/heliaxdev/tendermint-rs"
branch = "tomas/lowercase-node-id"

[dependencies.tendermint-testgen]
git = "https://github.com/heliaxdev/tendermint-rs"
branch = "tomas/lowercase-node-id"
optional = true

[dev-dependencies]
env_logger = "0.8.4"
tracing-subscriber = "0.2.19"
test-env-log = { version = "0.2.7", features = ["trace"] }
modelator = { git = "https://github.com/informalsystems/modelator", rev = "99f656fa8b3cf46a2aa0b6513e4e140d1778c4bd" }
tendermint-rpc = { git = "https://github.com/heliaxdev/tendermint-rs", branch = "tomas/lowercase-node-id", features = ["http-client", "websocket-client"] }
tendermint-testgen = { git = "https://github.com/heliaxdev/tendermint-rs", branch = "tomas/lowercase-node-id" } # Needed for generating (synthetic) light blocks.
sha2 = { version = "0.9.3" }

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks", "borsh"]
